--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "rollup": "rollup --config rollup.config.js --watch",
-    "jest": "jest",
+    "jest": "jest --coverage --coverageReporters=text-lcov | coveralls",
     "coverage:server": "cd lcov-report && http-server",
     "eslint": "eslint . --fix --ext .js"
   },
@@ -26,6 +26,7 @@
     "@babel/preset-env": "^7.8.6",
     "@babel/runtime": "^7.8.4",
     "babel-jest": "^25.1.0",
+    "coveralls": "^3.0.9",
     "eslint": "^6.8.0",
     "jest": "^25.1.0",
     "rollup": "^1.32.0",
