--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "javascript-snippet",
   "version": "1.0.0",
   "description": "代码片段",
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "scripts": {
     "rollup": "rollup --config rollup.config.js --watch",
     "test": "jest --coverage --coverageReporters=text-lcov | coveralls",
     "coverage:server": "cd lcov-report && http-server",
-    "eslint": "eslint . --fix --ext .js",
+    "eslint": "eslint . --fix --ext .js,.ts",
     "gen:menu": "node ./scripts/autoGenerateMenu.js"
   },
   "husky": {
@@ -31,6 +31,8 @@
     "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.6",
     "@babel/runtime": "^7.8.4",
+    "@typescript-eslint/eslint-plugin": "^2.22.0",
+    "@typescript-eslint/parser": "^2.22.0",
     "babel-jest": "^25.1.0",
     "coveralls": "^3.0.9",
     "eslint": "^6.8.0",
@@ -39,6 +41,9 @@
     "rollup": "^1.32.0",
     "rollup-plugin-eslint": "^7.0.0",
     "rollup-plugin-generate-html-template": "^1.6.1",
-    "rollup-plugin-serve": "^1.0.1"
+    "rollup-plugin-serve": "^1.0.1",
+    "rollup-plugin-typescript": "^1.0.1",
+    "tslib": "^1.11.1",
+    "typescript": "^3.8.3"
   }
 }
